@@ -113,7 +113,8 @@ enum formatters {
 	TESTformatter,
 	CLEANformatter,
 	TIMERformatter,
-	SAMformatter
+	SAMformatter,
+	EXPANDEDformatter
 };
 static enum formatters formatter = NOformatter;
 char *separator = NULL;		/* column separator for CSV/TAB format */
@@ -660,6 +661,61 @@ XMLrenderer(MapiHdl hdl)
 	}
 	mnstr_printf(toConsole_raw, "</table>\n");
 	mnstr_flush(toConsole_raw);
+}
+
+static void
+EXPANDEDrenderer(MapiHdl hdl)
+{
+	int i, fields, fieldw, rec = 0;
+
+	fields = mapi_get_field_count(hdl);
+	fieldw = 0;
+	for (i = 0; i < fields; i++) {
+		int w = (int) utf8strlen(mapi_get_name(hdl, i), NULL);
+		if (w > fieldw)
+			fieldw = w;
+	}
+	while (!mnstr_errnr(toConsole) && (fields = fetch_row(hdl)) != 0) {
+		int valuew = 0, len;
+		++rec;
+		for (i = 0; i < fields; i++) {
+			char *data = mapi_fetch_field(hdl, i);
+			char *edata;
+			int w;
+
+			if (data == NULL)
+				data = nullstring;
+			do {
+				edata = utf8skip(data, ~(size_t)0);
+				w = utf8strlen(data, edata);
+				if (w > valuew)
+					valuew = w;
+				data = edata;
+				if (*data)
+					data++;
+			} while (*edata);
+		}
+		len = mnstr_printf(toConsole, "-[ RECORD %d ]-", rec);
+		while (len++ < fieldw + valuew + 3)
+			mnstr_write(toConsole, "-", 1, 1);
+		mnstr_write(toConsole, "\n", 1, 1);
+		for (i = 0; i < fields; i++) {
+			char *data = mapi_fetch_field(hdl, i);
+			char *edata;
+			const char *name = mapi_get_name(hdl, i);
+			if (data == NULL)
+				data = nullstring;
+			do {
+				edata = utf8skip(data, ~(size_t)0);
+				mnstr_printf(toConsole, "%-*s | %.*s\n", fieldw, name, (int) (edata - data), data);
+				name = "";
+				data = edata;
+				if (*data)
+					data++;
+			} while (*edata);
+		}
+	}
+	mnstr_flush(toConsole);
 }
 
 static void
@@ -1478,6 +1534,8 @@ setFormatter(const char *s)
 		formatter = TIMERformatter;
 	} else if (strcmp(s, "sam") == 0) {
 		formatter = SAMformatter;
+	} else if (strcmp(s, "x") == 0 || strcmp(s, "expanded") == 0) {
+		formatter = EXPANDEDformatter;
 	} else {
 		mnstr_printf(toConsole, "unsupported formatter\n");
 	}
@@ -1701,6 +1759,9 @@ format_result(Mapi mid, MapiHdl hdl, char singleinstr)
 				break;
 			case SAMformatter:
 				SAMrenderer(hdl);
+				break;
+			case EXPANDEDformatter:
+				EXPANDEDrenderer(hdl);
 				break;
 			default:
 				RAWrenderer(hdl);
@@ -2639,6 +2700,9 @@ doFile(Mapi mid, const char *file, int useinserts, int interactive, int save_his
 							break;
 						case XMLformatter:
 							mnstr_printf(toConsole, "xml\n");
+							break;
+						case EXPANDEDformatter:
+							mnstr_printf(toConsole, "expanded\n");
 							break;
 						default:
 							mnstr_printf(toConsole, "none\n");
