@@ -1,3 +1,7 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Thu Feb 19 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Added a new output format to mclient: --format=expanded (or -fx).
+  In this format, column values are shown in full and below each other.
+
